prover-ray/zkcdriver/testdata/synced/invalid/basic_07.zkc
//error:4:3-9:unexpected token
fn f(x:u8) -> (r:u8) {
  r = x +
  return
}
